@@ -3,7 +3,6 @@
 /static/s/*/style.css
 /static/s/*/boxbg.png
 /static/cv/
-/static/rg/
 /static/sf/
 /static/st/
 /static/robots.txt
