@@ -1182,3 +1182,10 @@ a .icons { cursor: pointer }
 .icons.ko  { background-position: -61px -88px; }
 .icons.vi  { background-position: -61px -99px; }
 
+
+/* Relation graph colors */
+svg .border { fill: none; stroke: $border$ }
+svg .edge polygon.border { fill: $border$ }
+svg .nodebg { fill: $tabbg$; stroke: $tabbg$ }
+svg text { fill: $maintext$ }
+
