@@ -76,7 +76,7 @@ sub dbVNGet {
     $o{what} =~ /changes/ ?
       'JOIN users u ON u.id = c.requester' : (),
     $o{what} =~ /relgraph/ ?
-      'JOIN relgraph rg ON rg.id = v.rgraph' : (),
+      'JOIN vn_graphs vg ON vg.id = v.rgraph' : (),
   );
 
   my $tag_ids = $o{tags_include} && join ',', @{$o{tags_include}[1]};
@@ -86,7 +86,7 @@ sub dbVNGet {
       qw|vr.alias vr.image vr.img_nsfw vr.length vr.desc vr.l_wp vr.l_encubed vr.l_renai vr.l_vnn| ) : (),
     $o{what} =~ /changes/ ? (
       qw|c.requester c.comments v.latest u.username c.rev c.causedby|, q|extract('epoch' from c.added) as added|) : (),
-    $o{what} =~ /relgraph/ ? 'rg.cmap' : (),
+    $o{what} =~ /relgraph/ ? 'vg.svg' : (),
     $o{what} =~ /ranking/ ? '(SELECT COUNT(*)+1 FROM vn iv WHERE iv.hidden = false AND iv.c_popularity > v.c_popularity) AS ranking' : (),
     $tag_ids ?
       qq|(SELECT AVG(tvb.rating) FROM tags_vn_bayesian tvb WHERE tvb.tag IN($tag_ids) AND tvb.vid = v.id AND spoiler <= $o{tags_include}[0] GROUP BY tvb.vid) AS tagscore| : (),
